moved dependecy of jquery ui position to lib folder

--- a/example/index.html
+++ b/example/index.html
@@ -9,7 +9,7 @@
 
   <!-- Include plugin code testing framework -->
   <link rel="Stylesheet" media="screen" href="../dist/css/jquery.dialog.css"/>
-  <script type="text/javascript" src="jquery.ui.position-1.8.14.js"></script>
+  <script type="text/javascript" src="../lib/jquery.ui.position-1.8.14.js"></script>
   <script type="text/javascript" src="../src/jquery.dialog.js"></script>
 
   <!-- Include project source files -->
