--- a/example/index.html
+++ b/example/index.html
@@ -5,26 +5,40 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>dialog examples</title>
   <!-- Include latest jQuery -->
-  <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
+  <script type="text/javascript" src="../lib/jquery-1.6.2.js"></script>
 
   <!-- Include plugin code testing framework -->
   <link rel="Stylesheet" media="screen" href="../dist/css/jquery.dialog.css"/>
   <script type="text/javascript" src="../lib/jquery.ui.position-1.8.14.js"></script>
+  <script type="text/javascript" src="../lib/jquery.i18n.js"></script>
   <script type="text/javascript" src="../src/jquery.dialog.js"></script>
+  <script type="text/javascript" src="../src/i18n/en-US.js"></script>
+  <script type="text/javascript" src="../src/i18n/he-IL.js"></script>
 
   <!-- Include project source files -->
   <!-- Include unit test files -->
   <script type="text/javascript">
 
     $(document).ready(function(){
+      var localesCombo = $('select.currentLocale');
+      $.dialog.i18n.locale(localesCombo.val());
+      var confirmDefaultsFunc = $.dialog.types.confirm.defaults;
+
+      localesCombo.change(function(){
+        console.warn($(this).val());
+        $.dialog.i18n.locale($(this).val());
+        $.dialog.types.confirm.defaults = confirmDefaultsFunc;
+      });
+
+
       $('a.dialogPos').click(function(){
         var $this = $(this);
-        $.dialog({ content: '<div>yoyo<div>puki</div></div>', position: {my: $this.data('pos-my'), at: $this.data('pos-at'), of: $this} });
+        $.dialog.show({ content: '<div>yoyo<div>puki</div></div>', position: {my: $this.data('pos-my'), at: $this.data('pos-at'), of: $this} });
       });
 
       $('a.dialogEvents').click(function(){
         var $this = $(this);
-        $.dialog({
+        $.dialog.show({
           position: {of: $this, my: 'left bottom', at: 'left top'},
           content: $('<div>what up?</div><div><a href="javascript:;">Yes</a> | <a href="javascript:;" onclick="$.dialog.hide()">No</a></div>'),
           events: {
@@ -36,16 +50,15 @@
 
       $('a.dialogConfirm').click(function(){
          var $this = $(this);
-        $.dialog({
+        $.dialog.show({
           position: {of: $this},
-          type: 'confirm', 
-          content: {message: 'whats up puki?'}
+          type: 'confirm'
         });
       });
 
       $('a.dialogConfirm2').click(function(){
          var $this = $(this);
-        $.dialog({
+        $.dialog.show({
           position: {of: $this},
           type: 'confirm',
           content: {message: 'whats up puki?', yes: {cls: 'button2 green'}, no: {cls: 'button2 gray'}}
@@ -54,7 +67,7 @@
 
       $('a.dialogConfirmDefaults').click(function(){
         var $this = $(this);
-        $.fn.dialog.types.confirm.defaults = $.extend(true, $.fn.dialog.types.confirm.defaults, {
+        $.dialog.types.confirm.defaults = $.extend(true, $.dialog.types.confirm.defaults, {
           position: {my: 'left bottom', at: 'left top'},
           content: {yes: {cls: 'button2 gray'}, no: {cls: 'button2 green'}}
         });
@@ -62,7 +75,7 @@
 
       $('a.dialogConfirmEvents').click(function(){
         var $this = $(this);
-        $.dialog({
+        $.dialog.show({
           type: 'confirm',
           position: {of: $this, my: 'left bottom', at: 'left top'},
           content: {message: 'click on buttons'},
@@ -74,6 +87,9 @@
           }
         });
       });
+
+
+
 
     });
 
@@ -123,6 +139,13 @@
 <body>
 
 <h1>dialog examples</h1>
+<div class="locales">
+  <span>Locale: </span>
+  <select class="currentLocale">
+    <option>en-US</option>
+    <option>he-IL</option>
+  </select>
+</div>
 
 <div class="panel" style="text-align: center;">
   <h3>Positions</h3>
