support for swapping 'left' and 'right' positions when target direciton is rtl

--- a/example/index.html
+++ b/example/index.html
@@ -188,5 +188,21 @@
 
 </div>
 
+<div style="direction: rtl">
+  <h2>RTL</h2>
+  <hr/>
+  <div class="panel" style="text-align: center;">
+    <h3>Positions</h3>
+    <a href="javascript:;" class="dialogPos" data-pos-my="left top" data-pos-at="left bottom">Bottom left</a>
+    |
+    <a href="javascript:;" class="dialogPos" data-pos-my="left bottom" data-pos-at="left top">Top left</a>
+    |
+    <a href="javascript:;" class="dialogPos" data-pos-my="right top" data-pos-at="right bottom">Bottom right</a>
+    |
+    <a href="javascript:;" class="dialogPos" data-pos-my="right bottom" data-pos-at="right top">Top right</a>
+  </div>
+</div>
+
+
 </body>
 </html>
