added reposition method to dialog (so if it's size changes after display, can adjust the size)

--- a/example/index.html
+++ b/example/index.html
@@ -215,10 +215,21 @@
 </div>
 
 <div class="panel">
-  <h3>Events</h3>
+  <h3>Inside scroll</h3>
   <div class="scroll">
     <div class="content">
       <a href="javascript:;" class="insideScroll" >show</a>
+    </div>
+  </div>
+</div>
+
+<div class="panel">
+  <h3>Collission</h3>
+  <div class="outer" style="background-color: #efefef; border: 1px solid #aaa; height: 200px; width: 300px; margin: 0px auto;">
+    <div class="content">
+      <a href="javascript:;" class="dialogPos" data-pos-my="left top" data-pos-at="left bottom">Bottom left</a>
+      |
+      <a href="javascript:;" class="dialogPos" data-pos-my="left bottom" data-pos-at="left top">Top left</a>
     </div>
   </div>
 </div>
