added support for keyboard events in dialog

--- a/example/index.html
+++ b/example/index.html
@@ -13,6 +13,7 @@
   <!--Include plugin js dependecies-->
   <script type="text/javascript" src="../lib/jquery.ui.position-1.8.14.js"></script>
   <script type="text/javascript" src="../lib/jquery.i18n.js"></script>
+  <script type="text/javascript" src="../lib/jquery.jqext.js"></script>
   <script type="text/javascript" src="../lib/jquery.mousewheel.js"></script>
 
   <!--Include plugin js code-->
